; ModuleID = '/home/carl/AnghaBench/esp-idf/components/app_trace/sys_view/SEGGER/extr_SEGGER_SYSVIEW.c_SEGGER_SYSVIEW_Error.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/app_trace/sys_view/SEGGER/extr_SEGGER_SYSVIEW.c_SEGGER_SYSVIEW_Error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SEGGER_SYSVIEW_INFO_SIZE = common dso_local global i64 0, align 8
@SEGGER_SYSVIEW_QUANTA_U32 = common dso_local global i32 0, align 4
@SEGGER_SYSVIEW_MAX_STRING_LEN = common dso_local global i64 0, align 8
@SEGGER_SYSVIEW_ERROR = common dso_local global i32 0, align 4
@SYSVIEW_EVTID_PRINT_FORMATTED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SEGGER_SYSVIEW_Error(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i64, i64* @SEGGER_SYSVIEW_INFO_SIZE, align 8
  %6 = load i32, i32* @SEGGER_SYSVIEW_QUANTA_U32, align 4
  %7 = mul nsw i32 2, %6
  %8 = sext i32 %7 to i64
  %9 = add nsw i64 %5, %8
  %10 = load i64, i64* @SEGGER_SYSVIEW_MAX_STRING_LEN, align 8
  %11 = add nsw i64 %9, %10
  %12 = call i32 @RECORD_START(i64 %11)
  %13 = load i32*, i32** %4, align 8
  %14 = load i8*, i8** %2, align 8
  %15 = load i64, i64* @SEGGER_SYSVIEW_MAX_STRING_LEN, align 8
  %16 = call i32* @_EncodeStr(i32* %13, i8* %14, i64 %15)
  store i32* %16, i32** %3, align 8
  %17 = load i32*, i32** %3, align 8
  %18 = load i32, i32* @SEGGER_SYSVIEW_ERROR, align 4
  %19 = call i32 @ENCODE_U32(i32* %17, i32 %18)
  %20 = load i32*, i32** %3, align 8
  %21 = call i32 @ENCODE_U32(i32* %20, i32 0)
  %22 = load i32*, i32** %4, align 8
  %23 = load i32*, i32** %3, align 8
  %24 = load i32, i32* @SYSVIEW_EVTID_PRINT_FORMATTED, align 4
  %25 = call i32 @_SendPacket(i32* %22, i32* %23, i32 %24)
  %26 = call i32 (...) @RECORD_END()
  ret void
}

declare dso_local i32 @RECORD_START(i64) #1

declare dso_local i32* @_EncodeStr(i32*, i8*, i64) #1

declare dso_local i32 @ENCODE_U32(i32*, i32) #1

declare dso_local i32 @_SendPacket(i32*, i32*, i32) #1

declare dso_local i32 @RECORD_END(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
